--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 2.1.1.0
 
 Package: debhelper
 Architecture: all
+Depends: perl
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks. Programs are included to install various files into
