--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,11 @@
 #!/usr/bin/make -f
 # Note that I have to refer to debhelper programs witrh ./, to make sure
-# I run the most current ones.
+# I run the most current ones. That's also why there is a symlink to the 
+# current dh_lib in this debian/ directory.
+
+# If any automatic script generation is done in building this package, 
+# be sure to use the new templates from this package.
+export DH_AUTOSCRIPTDIR=autoscripts
 
 export DH_VERBOSE=1
 
@@ -29,10 +34,11 @@ binary-indep: build
 		-exec install -p {} debian/tmp/usr/bin \;
 	install -d debian/tmp/usr/lib/debhelper
 	cp dh_lib debian/tmp/usr/lib/debhelper
+	cp -a autoscripts debian/tmp/usr/lib/debhelper
 
 	./dh_installdocs TODO README
 	./dh_installexamples examples/*
-#	./dh_installmenu
+	./dh_installmenu
 	./dh_installmanpages
 	./dh_installchangelogs
 	./dh_compress
