--- a/examples/rules
+++ b/examples/rules
@@ -35,6 +35,7 @@ binary-arch: build
 	dh_installmenu
 	dh_installmanpages
 	dh_installchangelogs
+	dh_strip
 	dh_compress
 	dh_installdebfiles
 	dh_fixperms
