--- a/examples/rules
+++ b/examples/rules
@@ -33,6 +33,7 @@ binary-arch: build
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
+	dh_installcron
 	dh_installmanpages
 	dh_installchangelogs
 	dh_strip
