--- a/debian/rules
+++ b/debian/rules
@@ -44,6 +44,7 @@ binary-indep: build
 	./dh_compress
 	./dh_installdebfiles
 	./dh_fixperms
+	./dh_md5sums
 	./dh_builddeb
 
 binary: binary-indep binary-arch
