--- a/examples/rules
+++ b/examples/rules
@@ -35,11 +35,12 @@ binary-arch: build
 	dh_installmenu
 	dh_installcron
 	dh_installmanpages
+#	dh_undocumented
 	dh_installchangelogs
 	dh_strip
 	dh_compress
-	dh_installdebfiles
 	dh_fixperms
+	dh_installdebfiles
 	dh_builddeb
 
 binary: binary-indep binary-arch
