--- a/debian/rules
+++ b/debian/rules
@@ -42,8 +42,9 @@ binary-indep: build
 	./dh_installmanpages
 	./dh_installchangelogs
 	./dh_compress
-	./dh_installdebfiles
 	./dh_fixperms
+	./dh_suidregister
+	./dh_installdebfiles
 	./dh_md5sums
 	./dh_builddeb
 
