--- a/examples/rules
+++ b/examples/rules
@@ -43,7 +43,7 @@ binary-arch: build
 	dh_suidregister
 	dh_installdebfiles
 	dh_du
-	dh_m5dsums
+	dh_md5sums
 	dh_builddeb
 
 binary: binary-indep binary-arch
