--- a/examples/rules
+++ b/examples/rules
@@ -28,6 +28,7 @@ binary-arch: build
 	dh_testdir
 	dh_testroot
 	dh_clean
+	dh_installdirs
 	# Add here commands to install the files into debian/tmp
 	#$(MAKE) PREFIX=debian/tmp install
 	dh_installdocs
