--- a/examples/rules
+++ b/examples/rules
@@ -48,5 +48,8 @@ binary-arch: build
 	dh_md5sums
 	dh_builddeb
 
+source diff:                                                                  
+	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
+
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
