--- a/examples/rules
+++ b/examples/rules
@@ -34,6 +34,7 @@ binary-arch: build
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
+#	dh_installinit
 	dh_installcron
 	dh_installmanpages
 #	dh_undocumented
