--- a/examples/rules
+++ b/examples/rules
@@ -43,7 +43,9 @@ binary-arch: build
 	dh_compress
 	dh_fixperms
 	dh_suidregister
-	dh_installdebfiles
+	dh_installdeb
+	dh_shlibdeps
+	dh_gencontrol
 #	dh_makeshlibs
 	dh_du
 	dh_md5sums
