--- a/examples/rules
+++ b/examples/rules
@@ -7,7 +7,7 @@
 build: build-stamp
 build-stamp:
 	dh_testdir
-	# Add here commands to compile the pacckage.
+	# Add here commands to compile the package.
 	#$(MAKE)
 	touch build-stamp
 
