--- a/debian/rules
+++ b/debian/rules
@@ -47,6 +47,7 @@ binary-indep: build
 	./dh_installmenu
 	./dh_installmanpages
 	./dh_installchangelogs
+	./dh_movefiles
 	./dh_compress
 	./dh_fixperms
 	./dh_suidregister
