--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 2.3.0.1
 
 Package: debhelper
 Architecture: all
-Depends: perl, fileutils (>= 3.16-4)
+Depends: perl (>= 5.004), fileutils (>= 3.16-4)
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks. Programs are included to install various files into
