--- a/debian/rules
+++ b/debian/rules
@@ -42,7 +42,7 @@ binary-indep: build
 	cp -a dh_lib dh_getopt.pl debian/tmp/usr/lib/debhelper
 	cp -a autoscripts debian/tmp/usr/lib/debhelper
 
-	./dh_installdocs TODO README
+	./dh_installdocs TODO README PROGRAMMING
 	./dh_installexamples examples/*
 	./dh_installmenu
 	./dh_installmanpages
