--- a/examples/rules
+++ b/examples/rules
@@ -16,28 +16,36 @@ build-stamp:
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
+	rm -f build-stamp install-stamp
 
 	# Add here commands to clean up after the build process.
+	#-$(MAKE) clean
 	#-$(MAKE) distclean
 
 	dh_clean
 
+install: install-stamp
+install-stamp: build
+	dh_testdir
+	dh_testroot
+	dh_clean
+
+	# Add here commands to install the package into debian/tmp.
+	#$(MAKE) prefix=`pwd`/debian/tmp/usr install
+
+	touch install-stamp
+
 # Build architecture-independent files here.
-binary-indep: build
+binary-indep: build install
 # We have nothing to do by default.
 
 # Build architecture-dependent files here.
-binary-arch: build
+binary-arch: build install
 #	dh_testversion
 	dh_testdir
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-
-	# Add here commands to install the files into debian/tmp
-	#$(MAKE) prefix=`pwd`/debian/tmp install
-
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
