--- a/debian/rules
+++ b/debian/rules
@@ -47,7 +47,7 @@ binary-indep: build
 	cp -a dh_lib dh_getopt.pl debian/tmp/usr/lib/debhelper
 	cp -a autoscripts debian/tmp/usr/lib/debhelper
 
-	./dh_installdocs TODO README PROGRAMMING
+	./dh_installdocs TODO README PROGRAMMING from-debstd
 	./dh_installexamples examples/*
 	./dh_installmenu
 	./dh_installmanpages
