--- a/examples/rules
+++ b/examples/rules
@@ -25,7 +25,7 @@ clean:
 	dh_clean
 
 install: install-stamp
-install-stamp: build
+install-stamp: build-stamp
 	dh_testdir
 	dh_testroot
 	dh_clean -k
