--- a/examples/rules
+++ b/examples/rules
@@ -48,6 +48,7 @@ binary-arch: build install
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
+#	dh_installemacsen
 #	dh_installinit
 	dh_installcron
 	dh_installmanpages
