--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 2.5.0.0
 Package: debhelper
 Architecture: all
 Depends: perl (>= 5.004), fileutils (>= 3.16-4), file
+Suggests: dh-make
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
