--- a/examples/rules
+++ b/examples/rules
@@ -54,6 +54,7 @@ binary-arch: build install
 	dh_installmanpages
 #	dh_undocumented
 	dh_installchangelogs
+	dh_link
 	dh_strip
 	dh_compress
 	dh_fixperms
