--- a/debian/rules
+++ b/debian/rules
@@ -43,6 +43,7 @@ binary-indep: build
 	./dh_installmanpages
 	./dh_installchangelogs
 	./dh_movefiles
+	./dh_link
 	./dh_compress
 	./dh_fixperms
 	./dh_suidregister
