--- a/debian/control
+++ b/debian/control
@@ -12,4 +12,5 @@ Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
  are included to install various files into your package, compress files, fix
- file permissions, integrate your package with the debian menu system, etc.
+ file permissions, integrate your package with the debian menu system,
+ suidmanager, doc-base, etc.
