--- a/debian/rules
+++ b/debian/rules
@@ -73,4 +73,4 @@ dist:
         fi
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary localdist
+.PHONY: build clean binary-indep binary-arch binary dist
