--- a/examples/rules
+++ b/examples/rules
@@ -58,6 +58,7 @@ binary-arch: build install
 	dh_strip
 	dh_compress
 	dh_fixperms
+	# You may want to make some executables suid here.
 	dh_suidregister
 #	dh_makeshlibs
 	dh_installdeb
