--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ binary-indep: build
 	echo -e "package Dh_Version;\n\$$version='$(VERSION)';" > debian/tmp/usr/lib/debhelper/Dh_Version.pm
 	find . -perm +111 -maxdepth 1 -type f -not -name "*.pl" \
 		-exec install -p {} debian/tmp/usr/bin \;
-	cp -a *.pm debian/tmp/usr/lib/debhelper
+	cp -a Dh_*.pm debian/tmp/usr/lib/debhelper
 	cp -a autoscripts debian/tmp/usr/lib/debhelper
 
 	./dh_installdocs doc/TODO doc/README doc/PROGRAMMING doc/from-debstd
