--- a/examples/rules
+++ b/examples/rules
@@ -49,6 +49,7 @@ binary-arch: build install
 	dh_installexamples
 	dh_installmenu
 #	dh_installemacsen
+#	dh_installpam
 #	dh_installinit
 	dh_installcron
 	dh_installmanpages
