--- a/debian/rules
+++ b/debian/rules
@@ -46,7 +46,7 @@ binary-indep: build
 	cp -a Dh_*.pm debian/debhelper/usr/lib/debhelper
 	cp -a autoscripts debian/debhelper/usr/lib/debhelper
 
-	./dh_installdocs doc/TODO doc/README doc/PROGRAMMING doc/from-debstd
+	./dh_installdocs doc/*
 	./dh_installexamples examples/*
 	./dh_installmenu
 	./dh_installmanpages
