--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,8 @@
 # Note that I have to refer to debhelper programs with ./, to make sure
 # I run the most current ones. That's also why there is a symlink to the 
 # current Dh_lib.pm and the current Dh_getopt.pm in this debian/ directory.
+#
+# This is _not_ a good example of a debhelper rules file.
 
 # If any automatic script generation is done in building this package, 
 # be sure to use the new templates from this package.
