--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 2.5.1.0
 
 Package: debhelper
 Architecture: all
-Depends: perl (>= 5.004), fileutils (>= 3.16-4), file (>= 3.23-1)
+Depends: perl5 | perl (>= 5.004), fileutils (>= 3.16-4), file (>= 3.23-1)
 Suggests: dh-make
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
