--- a/examples/rules
+++ b/examples/rules
@@ -66,6 +66,7 @@ binary-arch: build install
 	dh_suidregister
 #	dh_makeshlibs
 	dh_installdeb
+#	dh_perl
 	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
