--- a/debian/rules
+++ b/debian/rules
@@ -52,6 +52,7 @@ binary-indep: build
 	./dh_installexamples examples/*
 	./dh_installmenu
 	./dh_installmanpages
+	./dh_installinfo
 	# Fix up all man pages, filling in the modification time for them.
 	# Note this runs beofre the command below so debhelper.1 gets the right
 	# date on it.
