--- a/examples/rules
+++ b/examples/rules
@@ -56,6 +56,7 @@ binary-arch: build install
 #	dh_installinit
 	dh_installcron
 	dh_installmanpages
+	dh_installinfo
 #	dh_undocumented
 	dh_installchangelogs
 	dh_link
