--- a/debian/rules
+++ b/debian/rules
@@ -51,8 +51,8 @@ binary-indep: link-stamp build
 	cp -a autoscripts debian/debhelper/usr/share/debhelper
 	rm -rf debian/debhelper/usr/share/debhelper/autoscripts/CVS
 
-	./dh_installdocs `find doc/ -type f | grep -v CVS`
-	./dh_installexamples `find doc -type f | grep -v CVS`
+	./dh_installdocs `find doc -type f | grep -v CVS`
+	./dh_installexamples `find examples -type f | grep -v CVS`
 	./dh_installmenu
 	./dh_installmanpages
 	./dh_installinfo
