--- a/examples/rules
+++ b/examples/rules
@@ -1,41 +1,78 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper. GNU copyright 1997 by Joey Hess.
+# Sample debian/rules that uses debhelper.
+# GNU copyright 1997 to 1999 by Joey Hess.
+
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
+# This is the debhelper compatability version to use.
+export DH_COMPAT=1
 
 build: build-stamp
 build-stamp:
 	dh_testdir
-	# Add here commands to compile the pacckage.
+
+	# Add here commands to compile the package.
 	#$(MAKE)
+
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
-	dh_cleantmp
+	rm -f build-stamp install-stamp
+
 	# Add here commands to clean up after the build process.
+	#-$(MAKE) clean
 	#-$(MAKE) distclean
-	rm -f build-stamp
 
-# Build architecture-independent files here.
-binary-indep: build
-	# We have nothing to do by default.
+	dh_clean
 
-# Build architecture-dependent files here.
-binary-arch: build
+install: install-stamp
+install-stamp: build-stamp
 	dh_testdir
 	dh_testroot
-	dh_cleantmp
-	# Add here commands to install the files into debian/tmp
-	#$(MAKE) PREFIX=debian/tmp install
+	dh_clean -k
+	dh_installdirs
+
+	# Add here commands to install the package into debian/tmp.
+	#$(MAKE) prefix=`pwd`/debian/tmp/usr install
+
+	touch install-stamp
+
+# Build architecture-independent files here.
+binary-indep: build install
+# We have nothing to do by default.
+
+# Build architecture-dependent files here.
+binary-arch: build install
+#	dh_testversion
+	dh_testdir
+	dh_testroot
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
+#	dh_installemacsen
+#	dh_installpam
+#	dh_installinit
+	dh_installcron
 	dh_installmanpages
+	dh_installinfo
+#	dh_undocumented
 	dh_installchangelogs
+	dh_link
+	dh_strip
 	dh_compress
-	dh_installdebfiles
 	dh_fixperms
+	# You may want to make some executables suid here.
+	dh_suidregister
+#	dh_makeshlibs
+	dh_installdeb
+#	dh_perl
+	dh_shlibdeps
+	dh_gencontrol
+	dh_md5sums
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary
+.PHONY: build clean binary-indep binary-arch binary install
