r266:    * FHS complience. Patch from Johnie Ingram <johnie@netgod.net>.      For the most part, this was a straight-forward substitution,      dh_installmanpages needed a non-obvious change though.    * Closes: #42489, #42587, #41732.    * dh_installdocs: Adds code to postinst and prerm as specified in      http://www.debian.org/Lists-Archives/debian-ctte-9908/msg00038.html,      to make /usr/doc/<package> a compatability symlink to      /usr/share/doc/<package>. Note that currently if something exists in      /usr/doc/<package> when the postinst is run, it will silently not make      the symlink. I'm considering more intellingent handing of this case.    * Note that if you build a package with this version of debhelper, it will      use /usr/share/man, /usr/share/doc, and /usr/share/info. You may need to      modify other files in your package that reference the old locations.

--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,15 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@master.debian.org>
-Standards-Version: 2.1.1.0
+Standards-Version: 3.0.1.1
 
 Package: debhelper
 Architecture: all
+Depends: perl5 | perl (>= 5.004), fileutils (>= 3.16-4), file (>= 3.23-1)
+Suggests: dh-make
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
- automate common tasks. Programs are included to install various files into
- your package, compress files, fix file permissions, integrate your package
- with the debian menu system, etc.
+ automate common tasks related to building binary debian packages. Programs
+ are included to install various files into your package, compress files, fix
+ file permissions, integrate your package with the debian menu system,
+ suidmanager, doc-base, etc.
