--- a/examples/rules
+++ b/examples/rules
@@ -49,6 +49,7 @@ binary-arch: build install
 #	dh_testversion
 	dh_testdir
 	dh_testroot
+#	dh_installdebconf	
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
