r286:    * Fiddlesticks. The neat make trick I was using in rules.multi2 failed if      you try to build binary-indep and binary-arch targets in the same make      run. Make tries to be too smart. Modified the file so it will work,      though it's now uglier. Closes: 46287    * examples/*: It's important that one -not- use a install-stamp target.      Install should run every time binary-* calls it. Otherwise if a binary-*      target is called twice by hand, you get duplicate entries in the      maintainer script fragment files. Closes: #46313

--- a/examples/rules
+++ b/examples/rules
@@ -20,7 +20,7 @@ build-stamp:
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp install-stamp
+	rm -f build-stamp
 
 	# Add here commands to clean up after the build process.
 	#-$(MAKE) clean
@@ -28,8 +28,7 @@ clean:
 
 	dh_clean
 
-install: install-stamp
-install-stamp: build-stamp
+install:
 	dh_testdir
 	dh_testroot
 	dh_clean -k
