--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@master.debian.org>
-Standards-Version: 3.0.1.1
+Build-Depends-Indep: perl5
+Standards-Version: 3.1.0.0
 
 Package: debhelper
 Architecture: all
