--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@master.debian.org>
-Build-Depends-Indep: perl5
-Standards-Version: 3.1.0.0
+Build-Depends-Indep: perl5, fileutils (>= 3.16-4), file (>= 3.23-1)
+Standards-Version: 3.0.1.1
 
 Package: debhelper
 Architecture: all
