--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: debhelper
 Section: devel
 Priority: optional
-Maintainer: Joey Hess <joeyh@master.debian.org>
+Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends-Indep: perl-5.005, fileutils (>= 3.16-4), file (>= 3.23-1)
 Standards-Version: 3.1.1.0
 
