r323: doesn't need build-deps on findutils, since that package is essential

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl-5.005, fileutils (>= 3.16-4), file (>= 3.23-1)
+Build-Depends-Indep: perl-5.005, file (>= 3.23-1)
 Standards-Version: 3.1.1.0
 
 Package: debhelper
