r328:    * Added dh_installmime calls to examples, Closes: #54056

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.1.1.1
 Package: debhelper
 Architecture: all
 Depends: perl5 | perl (>= 5.004), fileutils (>= 3.16-4), file (>= 3.23-1)
-Suggests: dh-make
+Suggests: dh-make, lynx
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
