--- a/examples/rules
+++ b/examples/rules
@@ -52,6 +52,7 @@ binary-arch: build install
 	dh_installmenu
 #	dh_installemacsen
 #	dh_installpam
+#	dh_installmime
 #	dh_installinit
 	dh_installcron
 	dh_installmanpages
