r331:    * Downgraded fileutils dependancy just a bit for the Hurd foks.      Closes: #54620

--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl-5.005, fileutils (>= 4.0l-1), file (>= 3.23-1)
+Build-Depends-Indep: perl-5.005, fileutils (>= 4.0-2.1), file (>= 3.23-1)
 Standards-Version: 3.1.1.1
 
 Package: debhelper
 Architecture: all
-Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0l-1), file (>= 3.23-1)
+Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1)
 Suggests: dh-make, lynx
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
