r338:    * Patch from Jorgen `forcer' Schaefer <forcer at mindless.com> (much      modified)to make dh_installwm use new window manager registration method,      update-alternatives. Closes: #52156, #34684 (latter bug is obsolete)    * Fixed $dh{flavor} to be upper-case.    * Deprecated dh_installemavcsen --number; use --priority instead. Also,      the option parser requires the parameter be a number now. And,      dh_installwm now accepts --priority, and window manager packages should      start using it.    * dh_installwm now behaves like a proper debhelper command, and reads      debian/<package>.wm too. This is a small behavior change; filenames      specified on the command line no longer apply to all packages it acts      on. I can't belive this program existed for 2 years with such a glaring      problem; I guess most people don't need ot register 5 wm's in 3      sub-packages. Anyway, it can handle such things now. :-)    * Moved Dh_*.pm to /usr/lib/perl5/Debian/Debhelper. *big* change.

--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,10 @@
 #!/usr/bin/make -f
 # Note that I have to refer to debhelper programs with ./, to make sure
-# I run the most current ones. That's also why there is a symlink to the 
-# current Dh_lib.pm and the current Dh_getopt.pm in this debian/ directory.
+# I run the most current ones.
 #
 # This is _not_ a good example of a debhelper rules file, but I didn't need
-# to tell you that; just see the 25 lines of inlined perl below.. See
-# examples/ for some good examples.
+# to tell you that; just see the 25 lines of inlined perl below.. 
+# See examples/ for some good examples.
 
 # If any automatic script generation is done in building this package, 
 # be sure to use the new templates from this package.
@@ -41,12 +40,15 @@ binary-indep: link-stamp build
 	./dh_testdir
 	./dh_testroot
 	./dh_clean -k
-	./dh_installdirs usr/bin usr/share/debhelper
+	./dh_installdirs usr/bin usr/share/debhelper \
+		usr/lib/perl5/Debian/Debhelper
 
-	echo -e "package Dh_Version;\n\$$version='$(VERSION)';" > debian/debhelper/usr/share/debhelper/Dh_Version.pm
+	echo -e "package Dh_Version;\n\$$version='$(VERSION)';" > \
+		debian/debhelper/usr/lib/perl5/Debian/Debhelper/Dh_Version.pm
 	find . -perm +111 -maxdepth 1 -type f -not -name "*.pl" \
 		-exec install -p {} debian/debhelper/usr/bin \;
-	cp -a Dh_*.pm debian/debhelper/usr/share/debhelper
+	cp -a Debian/Debhelper/*.pm \
+		debian/debhelper/usr/lib/perl5/Debian/Debhelper/
 	cp -a autoscripts debian/debhelper/usr/share/debhelper
 	rm -rf debian/debhelper/usr/share/debhelper/autoscripts/CVS
 
@@ -111,3 +113,4 @@ installhook:
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary dist
+
