--- a/debian/rules
+++ b/debian/rules
@@ -6,12 +6,16 @@
 # to tell you that; just see the 25 lines of inlined perl below.. 
 # See examples/ for some good examples.
 
+# Ensure that builds are self-hosting, which means I have to use the .pm
+# files in this package, not any that may be on the system.
+export PERL5LIB=.
+
 # If any automatic script generation is done in building this package, 
 # be sure to use the new templates from this package.
 export DH_AUTOSCRIPTDIR=autoscripts
 
 # Living dangerously :-)
-export DH_COMPAT=2
+export DH_COMPAT=3
 
 # Figure out the current debhelper version.
 VERSION=$(shell expr "`dpkg-parsechangelog 2>/dev/null |grep Version:`" : '.*Version: \(.*\)')
