--- a/examples/rules
+++ b/examples/rules
@@ -6,7 +6,7 @@
 #export DH_VERBOSE=1
 
 # This is the debhelper compatibility version to use.
-export DH_COMPAT=1
+export DH_COMPAT=2
 
 build: build-stamp
 build-stamp:
@@ -34,8 +34,8 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/tmp.
-	#$(MAKE) prefix=`pwd`/debian/tmp/usr install
+	# Add here commands to install the package into debian/<packagename>
+	#$(MAKE) prefix=`pwd`/debian/`dh_listpackages`/usr install
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -43,7 +43,7 @@ binary-indep: build install
 
 # Build architecture-dependent files here.
 binary-arch: build install
-#	dh_testversion
+	dh_testversion 2
 	dh_testdir
 	dh_testroot
 #	dh_installdebconf	
