r362:    * Minor man page updates as Overfiend struggles with debhelperizing X      4.0.

--- a/debian/rules
+++ b/debian/rules
@@ -20,7 +20,8 @@ export DH_COMPAT=3
 # Figure out the current debhelper version.
 VERSION=$(shell expr "`dpkg-parsechangelog 2>/dev/null |grep Version:`" : '.*Version: \(.*\)')
 
-export DH_VERBOSE=1
+# Debug
+#export DH_VERBOSE=1
 
 build: test
 # Nothing to do.	
