r383:    * dh_movefiles: no longer does the symlink ordering hack, as      this is supported by dpkg itself now. Added a dependancy on      dpkg-dev >= 1.7.0 to make sure this doesn't break anything.    * While I'm updating for dpkg 1.7.0, I removed the -ldirectory hack      from dh_shlibdeps; dpkg-shlibdeps has its own much more brutal hack to      make this work. The switch is ignored now for backwards compatability.    * dh_suidregister will be deprecated soon -- dpkg-statoverride is a      much better way.

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.2.1.0
 
 Package: debhelper
 Architecture: all
-Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1)
+Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0)
 Suggests: dh-make, lynx
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
