--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Standards-Version: 3.2.1.0
 
 Package: debhelper
 Architecture: all
-Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0)
-Suggests: dh-make, lynx
+Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0), lynx
+Suggests: dh-make
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
