--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends-Indep: perl-5.005, fileutils (>= 4.0-2.1), file (>= 3.23-1)
-Standards-Version: 3.2.1.2
+Standards-Version: 3.5.0.0
 
 Package: debhelper
 Architecture: all
 Depends: perl5 | perl (>= 5.004), fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0), lynx
-Suggests: dh-make
+Suggests: dh-make, debconf-utils
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
